k8s/converter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-service-deployment
spec:
  selector:
    matchLabels:
      app: converter-service
  template:
    metadata:
      labels:
        app: converter-service
    spec:
      containers:
      - name: converter-service
        image: sanjogpariyar2024/video-to-mp3-converterservice:latest
        command: ["python", "-u", "-m", "app.queues.consume"]
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: converter-service
spec:
  selector:
    app: converter-service
