k8s/email.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-deployment
spec:
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
      - name: email-service
        image: sanjogpariyar2024/video-to-mp3-emailservice:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
          - containerPort: 7010
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-service
  ports:
  - port: 7010
    targetPort: 7010
