k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appingress
  labels:
    app.kubernetes.io/name: appingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 5173
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port: 
              number: 8081
